--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
                 </section>
                 <section id="factors-section">
                     <div class="container">
-                        <h2 class="title">Почему возникает оксидативный стресс?</h2>
-                        <div class="subtitle">
+                        <h2 class="title animate" v-animate="'slide-left'">Почему возникает оксидативный стресс?</h2>
+                        <div class="subtitle animate" v-animate="'slide-right'">
                             В норме в нашем организме вырабатываются вещества-антиоксиданты, которые регулируют уровень свободных радикалов. Однако в результате воздействия агрессивных факторов свободных радикалов становится все больше, и собственных антиоксидантов не хватает, чтобы нейтрализовать их.
                         </div>
-                        <h2 class="title">Факторы, которые приводят к образованию избытка свободных радикалов в организме:</h2>
+                        <h2 class="title animate" v-animate="'slide-left'">Факторы, которые приводят к образованию избытка свободных радикалов в организме:</h2>
                         <div class="factor-list">
                             <div class="factor-list__item animate" v-animate="'slide-up'"><i class="icon"></i>Воздействие электромагнитного излучения</div>
                             <div class="factor-list__item animate" v-animate="'slide-up'"><i class="icon"></i>Постоянные стрессы</div>
