--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </section>
                 <section id="aging-section" data-navigation="reasons">
                     <div class="container">
-                        <h2 class="title">Насколько сильно вы устали?</h2>
+                        <h2 class="title animate" v-animate="'slide-left'">Насколько сильно вы устали?</h2>
                         <p class="animate" v-animate="'slide-right'">Вам не хочется вставать по утрам? Жизнь перестала играть яркими красками? Нет сил на общение с семьей, друзьями? Давно не посвящали себя любимому увлечению? Возможно, стоит признать, что вы устали! Это не слабость характера и не лень, а состояние, которое рано или поздно возникает у перегруженного делами и ответственностью человека. </p>
                     </div>
                 </section>
@@ -293,6 +293,7 @@
                         <!-- <div class="antioxidants-images__item"></div>
                                     <div class="antioxidants-images__item"></div> -->
                         <img data-src="img/girlmid.png" alt="" class="antioxidants-image">
+                        <img data-src="img/girlmid-2.png" alt="" class="antioxidants-image">
                         <!-- </div> -->
                     </div>
                 </section>
