--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Sinergin 2</title>
+    <title>Energy Akvion</title>
     <link rel="stylesheet" href="public/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
     <!-- Fix for iOS Safari zooming bug -->
